--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -56,3 +56,27 @@ button:hover {
     cursor: pointer;
     color: #888888;
 }
+#questionName {
+    font-size: 20px;
+    color: wheat;
+}
+
+#annswerName {
+    font-size: 16px;
+    color: lightyellow;
+}
+
+.questionForm {
+    background-color: #777777;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid green;
+    padding: 10px;
+
+}
+
+#questionTitle {
+    color: darkblue;
+
+}
