--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -57,26 +57,79 @@ button:hover {
     color: #888888;
 }
 #questionName {
+    color: blanchedalmond;
     font-size: 20px;
-    color: wheat;
 }
 
 #annswerName {
     font-size: 16px;
-    color: lightyellow;
 }
 
 .questionForm {
-    background-color: #777777;
+    background-color: #343a40;
     width: 800px;
     margin-left: auto;
     margin-right: auto;
-    border: 3px solid green;
-    padding: 10px;
+    border: 3px solid #005580;
+    padding: 42px;
+    border-radius: 10px;
+}
 
+#container {
+    background-color: #343a40;
+    color: aliceblue;
+    width: auto;
+    padding: 30px;
 }
 
 #questionTitle {
-    color: darkblue;
+    text-align: center;
+}
 
+.button {
+    background-color: #005580;
+    color: aliceblue;
+    width: 90px;
+    height: 42px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+    float: left;
+}
+
+.homeButton {
+    background-color: #005580;
+    color: aliceblue;
+    width: 90px;
+    height: 30px;
+    font-size: 14px;
+    text-align: center;
+    border: 1px solid aliceblue;
+    border-radius: 10px;
+    cursor: pointer;
+    float: right;
+    padding-top: 12px;
+}
+
+a:link {
+    text-decoration: none;
+
+}
+
+#category {
+    border-top: 3px solid #005580;
+    padding-top: 15px;
+}
+#categoryName {
+    color: blanchedalmond;
+}
+.button:hover{
+    background-color: #004470;
+    color: #e9e7ee;
+}
+
+.errorMessage {
+    color: red;
+    padding: 10px;
 }
