--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -70,6 +70,7 @@ button:hover {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
     border: 3px solid #005580;
     padding: 42px;
     border-radius: 10px;
@@ -82,8 +83,12 @@ button:hover {
     padding: 30px;
 }
 
-#questionTitle {
+.title {
     text-align: center;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
 
 .button {
