Refactor - finishing jsp file

--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -57,10 +57,8 @@ button:hover {
     color: #888888;
 }
 
-#listElement {
-    padding-left: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+html > body > div > div > div > div > a > div {
+    padding: 0px 30px 0px 50px;
+    border: 2px white;
     border-top-style: dotted;
-    border-color: white;
 }
