--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -95,8 +95,8 @@ button:hover {
 .button {
     background-color: #005580;
     color: aliceblue;
-    width: 120px;
-    height: 60px;
+    width: auto;
+    height: 100px;
     font-size: 14px;
     text-align: center;
     margin-top: 30px;
