--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -218,7 +218,7 @@ html > body > div > div > div > div > a > div {
 
 
 
-/*Now the CSS*/
+/*CSS for questionTree */
 * {margin: 0; padding: 0;}
 
 .tree ul {
@@ -318,6 +318,3 @@ right connector from last child*/
 .tree li a:hover+ul ul::before{
     border-color:  #94a0b4;
 }
-
-/*Thats all. I hope you enjoyed it.
-Thanks :)*/
