--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -305,7 +305,7 @@ right connector from last child*/
     border: 1px solid #ccc;
     padding: 5px 10px;
     text-decoration: none;
-    color: #666;
+    color: #c8e4f8;
     font-family: arial, verdana, tahoma;
     font-size: 11px;
     display: inline-block;
