--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -14,13 +14,24 @@ a {
     color: aliceblue;
 }
 
+body {
+    background-image: url("background.jpg");
+}
+
+body > div {
+    background-color: rgba(51, 51, 51, 0.8);
+    margin-top: 10px;
+    padding-top: 10px;
+    border-radius: 10px;
+}
+
 body > div > div > div > a > h1 > i {
     font-size: 40px;
 }
 
 div > a:hover {
     color: white;
-    background-color: #888888;
+    background-color: #333333;
     text-decoration: none;
 }
 
@@ -37,10 +48,10 @@ div.dropdown {
 }
 
 .nav{
-    background-color: #777777;
+    background-color: rgba(51, 51, 51, 0.9);
 }
 .nav-item:hover {
-    background-color: #888888;
+    background-color: rgba(68, 68, 68, 0.9);
 }
 
 form {
@@ -53,7 +64,7 @@ i {
 
 button:hover {
     cursor: pointer;
-    color: #888888;
+    color: #444444;
 }
 #questionName {
     color: blanchedalmond;
