--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -18,6 +18,8 @@ body > div {
     background-color: rgba(51, 51, 51, 0.8);
     background-size: auto;
     margin-top: 10px;
+    padding-top: 10px;
+    border-radius: 10px;
 }
 
 a {
@@ -30,7 +32,7 @@ body > div > div > div > a > h1 > i {
 
 div > a:hover {
     color: white;
-    background-color: #888888;
+    background-color: rgba(68, 68, 68, 0.8);
     text-decoration: none;
 }
 
@@ -47,10 +49,10 @@ div.dropdown {
 }
 
 .nav{
-    background-color: #777777;
+    background-color: rgba(51, 51, 51, 0.8);
 }
 .nav-item:hover {
-    background-color: #888888;
+    background-color: rgba(68, 68, 68, 0.8);
 }
 
 form {
@@ -63,7 +65,7 @@ i {
 
 button:hover {
     cursor: pointer;
-    color: #888888;
+    color: rgba(68, 68, 68, 0.8);
 }
 #questionName {
     color: blanchedalmond;
@@ -82,18 +84,16 @@ html > body > div > div > div > div > a > div {
 }
 
 .questionForm {
-    background-color: #343a40;
+    background-color: rgba(51, 51, 51, 0.8);
     width: 800px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
-    border: 3px solid #005580;
     padding: 42px;
-    border-radius: 10px;
 }
 
 #container {
-    background-color: #343a40;
+    background-color: rgba(51, 51, 51, 0.8);
     color: aliceblue;
     width: auto;
     padding: 30px;
