--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -14,6 +14,11 @@ body {
     background-image: url("background.jpg");
 }
 
+.diagram {
+    background-image: none;
+    background-color: #343a40
+}
+
 body > div {
     background-color: rgba(51, 51, 51, 0.8);
     background-size: auto;
