--- a/web/src/main/webapp/css/style.css
+++ b/web/src/main/webapp/css/style.css
@@ -230,7 +230,25 @@ html > body > div > div > div > div > a > div {
 #login-modal {
     background-color: #343a40;
 }
-
+#lang_ButtonPL{
+    background-image: url(if_PL.png);
+    background-repeat: no-repeat;  /* make the background image appear only once */
+    background-position: 0px 0px;  /* equivalent to 'top left' */
+    border: none;           /* assuming we don't want any borders */
+    cursor: pointer;        /* make the cursor like hovering over an <a> element */
+    height: 17px;           /* make this the size of your image */
+    padding-left: 23px;     /* make text start to the right of the image */
+    vertical-align: middle; /* align the text vertically centered */
+}
+#lang_ButtonGB{
+    background-image: url(if_GB.png);
+    background-repeat: no-repeat;  /* make the background image appear only once */
+    background-position: 0px 0px;  /* equivalent to 'top left' */
+    border: none;           /* assuming we don't want any borders */
+    cursor: pointer;        /* make the cursor like hovering over an <a> element */
+    height: 17px;           /* make this the size of your image */
+    padding-left: 23px;     /* make text start to the right of the image */
+    vertical-align: middle; /* align the text vertically centered */}
 
 
 
